Changes to menu that make it open on hover now. The slider has also been adjusted to allow for the title bar to stay at the bottom without causing overlapping issues and resizes down to the appropriate copy size.

--- a/_cards.scss
+++ b/_cards.scss
@@ -3,6 +3,7 @@
   border-radius: 4px;
   box-shadow: 0 2px 2px 2px rgba(25, 25, 25, .08);
   @media screen and (max-width: $lg) {margin-bottom: 30px;}
+  @media screen and (min-width: $lg + 1) {margin-bottom: 15px;}
 
   &__header {
     border-top-left-radius: 4px;
@@ -27,17 +28,17 @@
   }
 
   &__thumbnail {
-    flex-basis: calc(200px);
-    height: 200px;
+    flex-basis: calc(150px);
+    height: 150px;
     padding: 0;
     margin: 0;
     flex-grow: 0;
     flex-shrink: 0;
-    width: 200px;
+    width: 150px;
 
     @include media(mm) {
-      width: 140px;
-      height: 140px;
+      flex-basis: 120px;
+      height: 120px;
     }
     @include media(nml) {
       width: 100%;
@@ -48,6 +49,16 @@
       object-fit: cover;
       width: 100%;
       height: 100%;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 0px;
+      @include media (nml) {
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+      }
     } 
   }
 
@@ -57,12 +68,62 @@
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px;
    &.np{padding:0;}
-   &.lp{padding: 8px;}
+   &.lp{
+    padding: 0 8px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 4px;
+    @include media (nml) {
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+
+    h3 {
+      @include media(mm) {
+        font: {
+          size: 1em;
+        }
+      }
+      @inlcude media(md) {
+        font: {
+          size: 1.05em;
+        }
+      }
+      @inlcude media(lg) {
+        font: {
+          size: 1.15em;
+        }
+      }
+    }
+    @include media(mm) {
+      font: {
+        size: 0.725em;
+      }
+    }
+
+    @include media(md) {
+      font: {
+        size: 0.75em;
+      }
+    }
+
+    @include media(lg) {
+      font: {
+        size: 0.85em;
+      }
+    }
+
+  }
+
     ul{
       padding-left: 0;
       &>li{
-        padding-bottom: 12px;
-        &>a{font-size: 12px;}
+        padding-bottom: 24px;
+        line-height: 1;
+        &>a{font-size: 14px;}
       }
       &>li:last-child {
         padding: 0;
@@ -71,6 +132,7 @@
         &>li:nth-of-type(n+7) {display: none;}
       }
     }
+
   }
 
   &__date{
@@ -107,7 +169,7 @@
     }
     font: {
       size: 12px;
-      weight: 300;
+      weight: 600;
     }
   }
 
@@ -134,6 +196,7 @@
     h3 {
       font-size: 26px;
       @media screen and (max-width: $wl - 1) {font-size: 24px;}
+      @media screen and (max-width: $lg - 1) {font-size: 22px;}
       font-weight: 400;
       padding-bottom: 48px;
 
