--- a/_slider.scss
+++ b/_slider.scss
@@ -20,10 +20,12 @@
       visibility: visible !important;
 
       svg {
+        background: rgba(0, 0, 0, .85);
+        border-radius: 3px;
         fill: currentColor;
-        margin: 8px;
-        background: rgba(0,0,0,.85);
-        border-radius: 3px; 
+        height: auto;
+        padding: 8px;
+        width: 36px;
       }     
     }
   }
